tests/ui/prim_ty_field_access.stderr
error: invalid field access on primitive type
   ╭─[tests/ui/prim_ty_field_access.ina:5:13]
   │
 5 │     let b = a.a;
   │             ┬
   │             ╰─ `integer` has no field `a`
   ∙
───╯
